[package]
authors = ["messense <messense@icloud.com>"]
description = "Simple tool to highlight rustc --explain output"
keywords = ["error", "highlight"]
license = "MIT"
name = "rusted"
readme = "README.md"
repository = "https://github.com/messense/rusted-rs"
version = "0.1.3"

[dependencies]
pulldown-cmark = "0.0.14"
syntect = "1.3"
